adjusted layout issues

--- a/public/styles.css
+++ b/public/styles.css
@@ -5,6 +5,13 @@
   margin: 0 auto;
   justify-content: center;
 }
+
+a {
+  text-decoration: none;
+  color: lightseagreen;
+  flex-basis: 25%;
+}
+
 .profile {
   margin: 5px;
   flex-basis: 20%;
@@ -16,7 +23,6 @@
   border: solid 1px aliceblue;
   border-radius: 5px;
   transition-duration: 500ms;
-
 }
 
 .employed:hover {
@@ -24,6 +30,7 @@
 }
 .unemployed:hover {
   background-color: #3EC1E8;
+  color: grey;
 }
 
 .info {
@@ -32,7 +39,6 @@
   font-family: 'Open Sans', sans-serif;
 }
 .image {
-
   align-self: center;
 }
 
